--- a/package.json
+++ b/package.json
@@ -1,54 +1,19 @@
 {
 	"name": "paperplane",
-	"version": "3.1.10",
-	"main": "dist/src/server",
+	"version": "4.0.0",
+	"workspaces": [
+		"apps/*",
+		"packages/*"
+	],
 	"private": true,
 	"scripts": {
-		"dev": "NODE_ENV=development ts-node src/server",
-		"build": "yarn build:server && yarn build:app",
-		"build:server": "tsc --project src/server --outDir ./dist",
-		"build:app": "next build",
-		"prisma:generate": "prisma generate",
-		"start": "next start",
-		"lint": "next lint"
+		"build": "turbo run build",
+		"start:dev": "turbo run dev --parallel",
+		"lint": "turbo run lint",
+		"postinstall": "is-ci || husky install"
 	},
-	"dependencies": {
-		"@prisma/client": "^4.8.0",
-		"@tippyjs/react": "^4.2.6",
-		"@types/ms": "^0.7.31",
-		"@types/ws": "^8.5.3",
-		"axios": "^1.2.1",
-		"body-parser": "^1.20.1",
-		"chokidar": "^3.5.3",
-		"colorette": "^2.0.19",
-		"cookie": "^0.5.0",
-		"cookie-parser": "^1.4.6",
-		"cookies-next": "^2.1.1",
-		"copy-to-clipboard": "^3.3.3",
-		"dotenv": "^16.0.3",
-		"express": "^4.18.2",
-		"express-rate-limit": "^6.7.0",
-		"file-saver": "^2.0.5",
-		"formik": "^2.2.9",
-		"framer-motion": "^8.0.1",
-		"fuse.js": "^6.6.2",
-		"mime-types": "^2.1.35",
-		"moment": "2.29.4",
-		"moment-timezone": "^0.5.40",
-		"ms": "^2.1.3",
-		"multer": "^1.4.5-lts.1",
-		"next": "13.0.7",
-		"react": "18.2.0",
-		"react-color": "^2.19.3",
-		"react-dom": "18.2.0",
-		"react-dropzone": "^14.2.3",
-		"react-select": "^5.7.0",
-		"react-spinners": "^0.13.7",
-		"react-switch": "^7.0.0",
-		"react-toastify": "^9.1.1",
-		"short-unique-id": "^4.4.4",
-		"ws": "^8.11.0",
-		"yup": "^0.32.11"
+	"resolutions": {
+		"@typescript-eslint/eslint-plugin": "^5.46.1"
 	},
 	"devDependencies": {
 		"@commitlint/cli": "^17.3.0",
@@ -56,15 +21,7 @@
 		"@sapphire/eslint-config": "^4.3.8",
 		"@sapphire/prettier-config": "^1.4.4",
 		"@sapphire/ts-config": "^3.3.4",
-		"@types/cookie": "^0.5.1",
-		"@types/cookie-parser": "^1.4.3",
-		"@types/express": "^4.17.15",
-		"@types/file-saver": "^2.0.5",
-		"@types/mime-types": "^2.1.1",
-		"@types/multer": "^1.4.7",
 		"@types/node": "18.11.17",
-		"@types/react": "18.0.26",
-		"@types/react-color": "^3.0.6",
 		"@typescript-eslint/eslint-plugin": "^5.47.0",
 		"@typescript-eslint/parser": "^5.47.0",
 		"eslint": "^8.30.0",
@@ -72,10 +29,13 @@
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-prettier": "^4.2.1",
 		"husky": "^8.0.2",
+		"is-ci": "^3.0.1",
 		"lint-staged": "^13.1.0",
-		"prisma": "^4.8.0",
-		"sass": "^1.57.1",
+		"turbo": "^1.6.3",
 		"typescript": "4.9.4"
+	},
+	"engines": {
+		"node": ">= v18.12.1"
 	},
 	"packageManager": "yarn@3.3.1"
 }
