--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -10,10 +10,12 @@
 	},
 	"dependencies": {
 		"@next/font": "^13.1.0",
+		"@paperplane/buttons": "*",
+		"@paperplane/forms": "*",
+		"@paperplane/logo": "*",
 		"next": "13.1.1",
 		"react": "^18.2.0",
-		"react-dom": "^18.2.0",
-		"ui": "*"
+		"react-dom": "^18.2.0"
 	},
 	"devDependencies": {
 		"@babel/core": "^7.0.0",
