--- a/packages/buttons/package.json
+++ b/packages/buttons/package.json
@@ -7,16 +7,14 @@
 	"scripts": {
 		"lint": "TIMING=1 eslint"
 	},
+	"dependencies": {
+		"next": "13.1.1",
+		"react": "^18.2.0"
+	},
 	"devDependencies": {
 		"@types/react": "^18.0.22",
 		"@types/react-dom": "^17.0.11",
 		"eslint": "^7.32.0",
-		"eslint-config-custom": "*",
-		"react": "^18.2.0",
-		"tsconfig": "*",
 		"typescript": "^4.5.2"
-	},
-	"dependencies": {
-		"next": "13.1.1"
 	}
 }
