--- a/packages/logo/package.json
+++ b/packages/logo/package.json
@@ -7,13 +7,13 @@
 	"scripts": {
 		"lint": "TIMING=1 eslint"
 	},
+	"dependencies": {
+		"react": "^18.2.0"
+	},
 	"devDependencies": {
 		"@types/react": "^18.0.22",
 		"@types/react-dom": "^17.0.11",
 		"eslint": "^7.32.0",
-		"eslint-config-custom": "*",
-		"react": "^18.2.0",
-		"tsconfig": "*",
 		"typescript": "^4.5.2"
 	}
 }
