--- a/packages/navbar/package.json
+++ b/packages/navbar/package.json
@@ -10,6 +10,7 @@
 	"dependencies": {
 		"@paperplane/buttons": "*",
 		"@paperplane/logo": "*",
+		"next": "13.1.1",
 		"react": "^18.2.0"
 	},
 	"devDependencies": {
