--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -13,6 +13,7 @@
 		"@paperplane/buttons": "*",
 		"@paperplane/forms": "*",
 		"@paperplane/logo": "*",
+		"@paperplane/navbar": "*",
 		"next": "13.1.1",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0"
