--- a/packages/navbar/package.json
+++ b/packages/navbar/package.json
@@ -12,6 +12,7 @@
 		"@paperplane/logo": "*",
 		"@paperplane/markdown": "*",
 		"@paperplane/modal": "*",
+		"@paperplane/utils": "*",
 		"axios": "^1.2.2",
 		"next": "13.1.1",
 		"react": "^18.2.0",
