--- a/packages/navbar/package.json
+++ b/packages/navbar/package.json
@@ -15,6 +15,7 @@
 		"@paperplane/swr": "*",
 		"@paperplane/utils": "*",
 		"axios": "^1.2.2",
+		"framer-motion": "^8.1.7",
 		"next": "13.1.1",
 		"react": "^18.2.0",
 		"react-spinners": "^0.13.7"
