--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -17,6 +17,7 @@
 		"@paperplane/navbar": "*",
 		"@paperplane/swr": "*",
 		"next": "13.1.1",
+		"rc-progress": "^3.4.1",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0"
 	},
