--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -16,6 +16,7 @@
 		"@paperplane/modal": "*",
 		"@paperplane/navbar": "*",
 		"@paperplane/swr": "*",
+		"@paperplane/ui": "*",
 		"next": "13.1.1",
 		"rc-progress": "^3.4.1",
 		"react": "^18.2.0",
