--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -8,6 +8,7 @@
 		"lint": "TIMING=1 eslint"
 	},
 	"dependencies": {
+		"@paperplane/forms": "*",
 		"@paperplane/navbar": "*",
 		"@paperplane/utils": "*",
 		"rc-progress": "^3.4.1",
