--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -15,6 +15,7 @@
 		"@paperplane/logo": "*",
 		"@paperplane/swr": "*",
 		"@paperplane/ui": "*",
+		"@paperplane/utils": "*",
 		"next": "13.1.1",
 		"rc-progress": "^3.4.1",
 		"react": "^18.2.0",
