--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -10,5 +10,8 @@
 	"devDependencies": {
 		"eslint": "^7.32.0",
 		"typescript": "^4.5.2"
+	},
+	"dependencies": {
+		"@sapphire/timestamp": "^1.0.0"
 	}
 }
