--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -11,6 +11,7 @@
 		"@paperplane/forms": "*",
 		"@paperplane/navbar": "*",
 		"@paperplane/utils": "*",
+		"framer-motion": "^8.3.3",
 		"rc-progress": "^3.4.1",
 		"react": "^18.2.0"
 	},
