--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -13,10 +13,9 @@
 		"@paperplane/buttons": "*",
 		"@paperplane/forms": "*",
 		"@paperplane/logo": "*",
-		"@paperplane/modal": "*",
-		"@paperplane/navbar": "*",
 		"@paperplane/swr": "*",
 		"@paperplane/ui": "*",
+		"@paperplane/utils": "*",
 		"next": "13.1.1",
 		"rc-progress": "^3.4.1",
 		"react": "^18.2.0",
