--- a/.github/workflows/general-tests.yml
+++ b/.github/workflows/general-tests.yml
@@ -26,7 +26,7 @@ jobs:
         run: yarn install
 
       - name: Run Compiler
-        run: yarn build
+        run: yarn run build
   Linting:
     runs-on: ubuntu-latest
     env:
@@ -46,4 +46,4 @@ jobs:
         run: yarn install
 
       - name: Run Eslint
-        run: yarn lint --fix=false
+        run: yarn run lint
