--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -17,10 +17,12 @@
 		"@snowcrystals/icicle": "^1.0.2",
 		"axios": "^1.2.3",
 		"body-parser": "^1.20.1",
+		"colorette": "^2.0.19",
 		"cookie-parser": "^1.4.6",
 		"dotenv": "^16.0.3",
 		"express": "^4.18.2",
 		"ms": "^2.1.3",
+		"node-2fa": "^2.0.3",
 		"winston": "^3.8.2",
 		"winston-daily-rotate-file": "^4.7.1"
 	},
