--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
 	"private": true,
 	"scripts": {
 		"build": "turbo run build",
-		"start:dev": "turbo run dev --parallel --filter=server",
+		"start:dev": "turbo run dev --parallel --filter=!web",
 		"lint": "turbo run lint",
 		"postinstall": "is-ci || husky install"
 	},
