--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -14,6 +14,7 @@
 		"next": "^13.1.3"
 	},
 	"dependencies": {
+		"@prisma/client": "^4.9.0",
 		"@snowcrystals/icicle": "^1.0.2",
 		"axios": "^1.2.3",
 		"body-parser": "^1.20.1",
@@ -32,6 +33,7 @@
 		"@types/ms": "^0.7.31",
 		"@types/node": "^17.0.12",
 		"eslint": "7.32.0",
+		"prisma": "^4.9.0",
 		"typescript": "^4.5.3"
 	}
 }
