--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -23,6 +23,7 @@
 		"dotenv": "^16.0.3",
 		"express": "^4.18.2",
 		"jsonwebtoken": "^9.0.0",
+		"lodash": "^4.17.21",
 		"ms": "^2.1.3",
 		"node-2fa": "^2.0.3",
 		"winston": "^3.8.2",
@@ -32,6 +33,7 @@
 		"@types/cookie-parser": "^1.4.3",
 		"@types/express": "^4.17.15",
 		"@types/jsonwebtoken": "^9.0.1",
+		"@types/lodash": "^4.14.191",
 		"@types/ms": "^0.7.31",
 		"@types/node": "^17.0.12",
 		"eslint": "7.32.0",
