--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -14,6 +14,7 @@
 		"next": "^13.1.3"
 	},
 	"dependencies": {
+		"@prisma/client": "^4.9.0",
 		"@snowcrystals/icicle": "^1.0.2",
 		"axios": "^1.2.3",
 		"body-parser": "^1.20.1",
@@ -21,6 +22,8 @@
 		"cookie-parser": "^1.4.6",
 		"dotenv": "^16.0.3",
 		"express": "^4.18.2",
+		"jsonwebtoken": "^9.0.0",
+		"lodash": "^4.17.21",
 		"ms": "^2.1.3",
 		"node-2fa": "^2.0.3",
 		"winston": "^3.8.2",
@@ -29,9 +32,12 @@
 	"devDependencies": {
 		"@types/cookie-parser": "^1.4.3",
 		"@types/express": "^4.17.15",
+		"@types/jsonwebtoken": "^9.0.1",
+		"@types/lodash": "^4.14.191",
 		"@types/ms": "^0.7.31",
 		"@types/node": "^17.0.12",
 		"eslint": "7.32.0",
+		"prisma": "^4.9.0",
 		"typescript": "^4.5.3"
 	}
 }
