--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -26,6 +26,8 @@
 		"lodash": "^4.17.21",
 		"ms": "^2.1.3",
 		"node-2fa": "^2.0.3",
+		"node-os-utils": "^1.3.7",
+		"pidusage": "^3.0.2",
 		"winston": "^3.8.2",
 		"winston-daily-rotate-file": "^4.7.1"
 	},
@@ -36,6 +38,8 @@
 		"@types/lodash": "^4.14.191",
 		"@types/ms": "^0.7.31",
 		"@types/node": "^17.0.12",
+		"@types/node-os-utils": "^1.3.0",
+		"@types/pidusage": "^2.0.2",
 		"eslint": "7.32.0",
 		"prisma": "^4.9.0",
 		"typescript": "^4.5.3"
