--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -28,6 +28,7 @@
 		"node-2fa": "^2.0.3",
 		"node-os-utils": "^1.3.7",
 		"pidusage": "^3.0.2",
+		"ua-parser-js": "^1.0.33",
 		"winston": "^3.8.2",
 		"winston-daily-rotate-file": "^4.7.1"
 	},
@@ -40,6 +41,7 @@
 		"@types/node": "^17.0.12",
 		"@types/node-os-utils": "^1.3.0",
 		"@types/pidusage": "^2.0.2",
+		"@types/ua-parser-js": "^0.7.36",
 		"eslint": "7.32.0",
 		"prisma": "^4.9.0",
 		"typescript": "^4.5.3"
