--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -22,6 +22,7 @@
 		"cookie-parser": "^1.4.6",
 		"dotenv": "^16.0.3",
 		"express": "^4.18.2",
+		"fuse.js": "^6.6.2",
 		"jsonwebtoken": "^9.0.0",
 		"lodash": "^4.17.21",
 		"ms": "^2.1.3",
