--- a/apps/server/tsconfig.json
+++ b/apps/server/tsconfig.json
@@ -2,8 +2,9 @@
 	"extends": "../../tsconfig.base.json",
 	"compilerOptions": {
 		"outDir": "dist",
-		"skipLibCheck": true
+		"skipLibCheck": true,
+		"esModuleInterop": true
 	},
-	"include": ["src/**/*.ts"],
+	"include": ["src/**/*.ts", "./types/*.d.ts"],
 	"exclude": ["node_modules"]
 }
