--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -20,6 +20,7 @@
 		"body-parser": "^1.20.1",
 		"colorette": "^2.0.19",
 		"cookie-parser": "^1.4.6",
+		"cron": "^2.2.0",
 		"dotenv": "^16.0.3",
 		"express": "^4.18.2",
 		"fuse.js": "^6.6.2",
@@ -35,6 +36,7 @@
 	},
 	"devDependencies": {
 		"@types/cookie-parser": "^1.4.3",
+		"@types/cron": "^2.0.0",
 		"@types/express": "^4.17.15",
 		"@types/jsonwebtoken": "^9.0.1",
 		"@types/lodash": "^4.14.191",
