--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -20,19 +20,23 @@
 		"body-parser": "^1.20.1",
 		"colorette": "^2.0.19",
 		"cookie-parser": "^1.4.6",
+		"cron": "^2.2.0",
 		"dotenv": "^16.0.3",
 		"express": "^4.18.2",
+		"fuse.js": "^6.6.2",
 		"jsonwebtoken": "^9.0.0",
 		"lodash": "^4.17.21",
 		"ms": "^2.1.3",
 		"node-2fa": "^2.0.3",
 		"node-os-utils": "^1.3.7",
 		"pidusage": "^3.0.2",
+		"ua-parser-js": "^1.0.33",
 		"winston": "^3.8.2",
 		"winston-daily-rotate-file": "^4.7.1"
 	},
 	"devDependencies": {
 		"@types/cookie-parser": "^1.4.3",
+		"@types/cron": "^2.0.0",
 		"@types/express": "^4.17.15",
 		"@types/jsonwebtoken": "^9.0.1",
 		"@types/lodash": "^4.14.191",
@@ -40,6 +44,7 @@
 		"@types/node": "^17.0.12",
 		"@types/node-os-utils": "^1.3.0",
 		"@types/pidusage": "^2.0.2",
+		"@types/ua-parser-js": "^0.7.36",
 		"eslint": "7.32.0",
 		"prisma": "^4.9.0",
 		"typescript": "^4.5.3"
