--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -14,6 +14,7 @@
 		"next": "^13.1.3"
 	},
 	"dependencies": {
+		"@discordjs/collection": "^1.3.0",
 		"@prisma/client": "^4.9.0",
 		"@snowcrystals/icicle": "^1.0.2",
 		"axios": "^1.2.3",
