--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -14,6 +14,7 @@
 		"@paperplane/forms": "*",
 		"@paperplane/navbar": "*",
 		"@paperplane/utils": "*",
+		"axios": "^1.2.4",
 		"formik": "^2.2.9",
 		"framer-motion": "^8.3.3",
 		"ms": "^2.1.3",
