--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -19,6 +19,7 @@
 		"framer-motion": "^8.3.3",
 		"ms": "^2.1.3",
 		"rc-progress": "^3.4.1",
+		"react-spinners": "^0.13.8",
 		"yup": "^0.32.11"
 	},
 	"devDependencies": {
