--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -14,9 +14,13 @@
 		"@paperplane/forms": "*",
 		"@paperplane/navbar": "*",
 		"@paperplane/utils": "*",
+		"axios": "^1.2.4",
+		"formik": "^2.2.9",
 		"framer-motion": "^8.3.3",
 		"ms": "^2.1.3",
-		"rc-progress": "^3.4.1"
+		"rc-progress": "^3.4.1",
+		"react-spinners": "^0.13.8",
+		"yup": "^0.32.11"
 	},
 	"devDependencies": {
 		"@types/react": "^18.0.22",
