--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -8,7 +8,8 @@
 		"lint": "TIMING=1 eslint"
 	},
 	"peerDependencies": {
-		"react": "^18.2.0"
+		"react": "^18.2.0",
+		"react-dom": "18.2.0"
 	},
 	"dependencies": {
 		"@paperplane/forms": "*",
