--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -23,6 +23,7 @@
 		"@paperplane/ui": "*",
 		"@paperplane/utils": "*",
 		"axios": "^1.2.3",
+		"file-saver": "^2.0.5",
 		"formik": "^2.2.9",
 		"next-seo": "^5.15.0",
 		"rc-progress": "^3.4.1",
@@ -32,6 +33,7 @@
 	},
 	"devDependencies": {
 		"@babel/core": "^7.0.0",
+		"@types/file-saver": "^2.0.5",
 		"@types/node": "^17.0.12",
 		"@types/react": "^18.0.22",
 		"@types/react-dom": "^18.0.7",
