--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -20,11 +20,13 @@
 		"framer-motion": "^8.3.3",
 		"ms": "^2.1.3",
 		"rc-progress": "^3.4.1",
+		"react-color": "^2.19.3",
 		"react-spinners": "^0.13.8",
 		"yup": "^0.32.11"
 	},
 	"devDependencies": {
 		"@types/react": "^18.0.22",
+		"@types/react-color": "^3.0.6",
 		"@types/react-dom": "^17.0.11",
 		"eslint": "^7.32.0",
 		"typescript": "^4.5.2"
