--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -27,6 +27,7 @@
 		"fuse.js": "^6.6.2",
 		"jsonwebtoken": "^9.0.0",
 		"lodash": "^4.17.21",
+		"mime-types": "^2.1.35",
 		"ms": "^2.1.3",
 		"multer": "^1.4.5-lts.1",
 		"node-2fa": "^2.0.3",
@@ -43,6 +44,7 @@
 		"@types/express": "^4.17.15",
 		"@types/jsonwebtoken": "^9.0.1",
 		"@types/lodash": "^4.14.191",
+		"@types/mime-types": "^2.1.1",
 		"@types/ms": "^0.7.31",
 		"@types/multer": "^1.4.7",
 		"@types/node": "^17.0.12",
