--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -21,6 +21,7 @@
 		"ms": "^2.1.3",
 		"rc-progress": "^3.4.1",
 		"react-color": "^2.19.3",
+		"react-dropzone": "^14.2.3",
 		"react-spinners": "^0.13.8",
 		"react-switch": "^7.0.0",
 		"yup": "^0.32.11"
