--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
 	"scripts": {
 		"build": "turbo run build",
 		"start:dev": "turbo run dev --parallel",
+		"start:web:dev": "yarn workspace web run dev",
+		"start:server:dev": "yarn workspace server run dev:watch",
+		"cmd:server": "yarn workspace server run",
 		"lint": "turbo run lint",
 		"postinstall": "is-ci || husky install"
 	},
