--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -24,6 +24,7 @@
 		"react-dropzone": "^14.2.3",
 		"react-spinners": "^0.13.8",
 		"react-switch": "^7.0.0",
+		"short-unique-id": "^4.4.4",
 		"yup": "^0.32.11"
 	},
 	"devDependencies": {
