--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -36,7 +36,8 @@
 		"short-unique-id": "^4.4.4",
 		"ua-parser-js": "^1.0.33",
 		"winston": "^3.8.2",
-		"winston-daily-rotate-file": "^4.7.1"
+		"winston-daily-rotate-file": "^4.7.1",
+		"zip-lib": "^0.7.3"
 	},
 	"devDependencies": {
 		"@types/cookie-parser": "^1.4.3",
