--- a/package.json
+++ b/package.json
@@ -48,7 +48,8 @@
 		"react-toastify": "^9.1.1",
 		"short-unique-id": "^4.4.4",
 		"ws": "^8.12.0",
-		"yup": "^0.32.11"
+		"yup": "^0.32.11",
+		"zip-lib": "^0.7.3"
 	},
 	"devDependencies": {
 		"@commitlint/cli": "^17.4.2",
