--- a/.github/.readmeconfig.json
+++ b/.github/.readmeconfig.json
@@ -16,8 +16,9 @@
 	],
 	"project.installation": [
 		"The following guide only shows you the Docker installation steps, for more details visit [the documentation page](https://paperplane.ijskoud.dev/). We are using `~/paperplane` as data folder, `paperplane` as name for the docker container and port `3000` (the first one and not the second one) here, you can customise all the options.",
-		"```bash\ndocker pull ghcr.io/ijskoud/paperplane:latest\ndocker run --name=paperplane -d -v ~/paperplane:/paperplane/data -p 3000:3000 ghcr.io/ijskoud/paperplane:latest```"
+		"```bash\ndocker pull ghcr.io/ijskoud/paperplane:latest\ndocker run --name=paperplane -d -v ~/paperplane:/paperplane/data -p 3000:3000 ghcr.io/ijskoud/paperplane:latest\n```"
 	],
 	"project.icon": "apps/web/public/logo/text.png",
+	"project.icon_width": "500px",
 	"project.extra_info": []
 }
