--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -19,6 +19,7 @@
 		"@snowcrystals/icicle": "^1.0.2",
 		"axios": "^1.3.4",
 		"body-parser": "^1.20.2",
+		"busboy": "^1.6.0",
 		"colorette": "^2.0.19",
 		"cookie-parser": "^1.4.6",
 		"cron": "^2.3.0",
@@ -41,6 +42,7 @@
 		"zip-lib": "^0.7.3"
 	},
 	"devDependencies": {
+		"@types/busboy": "^1.5.0",
 		"@types/cookie-parser": "^1.4.3",
 		"@types/cron": "^2.0.1",
 		"@types/express": "^4.17.17",
