--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -18,6 +18,7 @@
 		"axios": "^1.3.4",
 		"formik": "^2.2.9",
 		"framer-motion": "^10.9.1",
+		"huge-uploader": "^1.0.6",
 		"ms": "^2.1.3",
 		"rc-progress": "^3.4.1",
 		"react-color": "^2.19.3",
