--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -1,5 +1,5 @@
 {
 	"extends": "../../tsconfig.next.json",
-	"include": ["next-env.d.ts", "src/**/*.ts", "src/**/*.tsx"],
+	"include": ["next-env.d.ts", "huge-uploader.d.ts", "src/**/*.ts", "src/**/*.tsx"],
 	"exclude": ["node_modules"]
 }
