--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -25,6 +25,7 @@
 		"react-dropzone": "^14.2.3",
 		"react-spinners": "^0.13.8",
 		"react-switch": "^7.0.0",
+		"react-syntax-highlighter": "^15.5.0",
 		"short-unique-id": "^4.4.4",
 		"yup": "^1.0.2"
 	},
@@ -32,6 +33,7 @@
 		"@types/react": "^18.0.29",
 		"@types/react-color": "^3.0.6",
 		"@types/react-dom": "^18.0.11",
+		"@types/react-syntax-highlighter": "^15.5.6",
 		"eslint": "8.36.0",
 		"typescript": "^4.9.5"
 	}
