--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -28,6 +28,7 @@
 		"next-seo": "^5.15.0",
 		"rc-progress": "^3.4.1",
 		"react-spinners": "^0.13.8",
+		"react-syntax-highlighter": "^15.5.0",
 		"react-toastify": "^9.1.2",
 		"yup": "^1.0.2"
 	},
@@ -37,6 +38,7 @@
 		"@types/node": "^18.15.10",
 		"@types/react": "^18.0.29",
 		"@types/react-dom": "^18.0.11",
+		"@types/react-syntax-highlighter": "^15.5.6",
 		"eslint": "8.36.0",
 		"tailwindcss": "^3.2.7",
 		"typescript": "^4.9.5"
