--- a/.github/.readmeconfig.json
+++ b/.github/.readmeconfig.json
@@ -1,18 +1,18 @@
 {
 	"project.version": "4.0.3",
 	"project.information": [
-		"- Customisable ✏️\n",
-		"- Blazingly fast thanks to Next.js ⚡\n",
-		"- File uploading and URL shortening ☁️\n",
-		"- Password Protection for files 🔐\n",
-		"- Discord Embeds using OG Metadata 🔗\n",
-		"- 2FA Authentication to protect the vulnerable data 🔄️\n",
-		"- Gallery and Table viewing options 📃\n",
-		"- Support for multiple users using domains 🧑‍🤝‍🧑\n",
-		"- Clean and modern design 🖌️\n",
-		"- User invite-only mode 📨\n",
-		"- Backup import and export functionality 📂\n",
-		"- Easy install using Docker! 🚢\n"
+		"- Customisable ✏️",
+		"- Blazingly fast thanks to Next.js ⚡",
+		"- File uploading and URL shortening ☁️",
+		"- Password Protection for files 🔐",
+		"- Discord Embeds using OG Metadata 🔗",
+		"- 2FA Authentication to protect the vulnerable data 🔄️",
+		"- Gallery and Table viewing options 📃",
+		"- Support for multiple users using domains 🧑‍🤝‍🧑",
+		"- Clean and modern design 🖌️",
+		"- User invite-only mode 📨",
+		"- Backup import and export functionality 📂",
+		"- Easy install using Docker! 🚢"
 	],
 	"project.installation": [
 		"The following guide only shows you the Docker installation steps, for more details visit [the documentation page](https://paperplane.ijskoud.dev/). We are using `~/paperplane` as data folder, `paperplane` as name for the docker container and port `3000` (the first one and not the second one) here, you can customise all the options.\n",
