--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -23,6 +23,7 @@
 		"@paperplane/ui": "*",
 		"@paperplane/utils": "*",
 		"axios": "^1.3.4",
+		"cors": "^2.8.5",
 		"file-saver": "^2.0.5",
 		"formik": "^2.2.9",
 		"next-seo": "^5.15.0",
@@ -34,6 +35,7 @@
 	},
 	"devDependencies": {
 		"@babel/core": "^7.21.3",
+		"@types/cors": "^2.8.13",
 		"@types/file-saver": "^2.0.5",
 		"@types/node": "^18.15.11",
 		"@types/react": "^18.0.31",
