--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
 		"@commitlint/config-angular": "^17.6.1",
 		"@sapphire/eslint-config": "^4.4.1",
 		"@sapphire/prettier-config": "^1.4.5",
-		"@sapphire/ts-config": "^3.3.4",
+		"@sapphire/ts-config": "4.0.0",
 		"@types/node": "18.16.0",
 		"@typescript-eslint/eslint-plugin": "^5.59.0",
 		"@typescript-eslint/parser": "^5.59.0",
@@ -43,7 +43,7 @@
 		"lint-staged": "^13.2.1",
 		"tailwindcss": "^3.3.1",
 		"turbo": "^1.9.3",
-		"typescript": "4.9.5"
+		"typescript": "5.0.4"
 	},
 	"engines": {
 		"node": ">= v18.16.0"
