--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -2,6 +2,7 @@
 	"name": "web",
 	"version": "0.0.0",
 	"private": true,
+	"type": "module",
 	"scripts": {
 		"dev": "tailwindcss -i ./src/styles/globals.css -o ./src/styles/output.css --watch",
 		"build:css": "tailwindcss -i ./src/styles/globals.css -o ./src/styles/output.css",
@@ -10,8 +11,8 @@
 		"lint": "next lint"
 	},
 	"peerDependencies": {
-		"@next/font": "^13.3.2",
-		"next": "^13.3.2",
+		"@next/font": "^13.3.4",
+		"next": "^13.3.4",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0"
 	},
@@ -43,6 +44,6 @@
 		"@types/react-syntax-highlighter": "^15.5.6",
 		"eslint": "8.39.0",
 		"tailwindcss": "^3.3.2",
-		"typescript": "^4.9.5"
+		"typescript": "^5.0.4"
 	}
 }
