--- a/package.json
+++ b/package.json
@@ -20,8 +20,9 @@
 		"@typescript-eslint/eslint-plugin": "^5.59.1"
 	},
 	"dependencies": {
-		"@next/font": "13.3.2",
-		"next": "^13.3.2",
+		"@next/font": "13.3.4",
+		"next": "^13.3.4",
+		"prettier": "^2.8.8",
 		"react": "18.2.0",
 		"react-dom": "^18.2.0"
 	},
@@ -30,12 +31,12 @@
 		"@commitlint/config-angular": "^17.6.1",
 		"@sapphire/eslint-config": "^4.4.1",
 		"@sapphire/prettier-config": "^1.4.5",
-		"@sapphire/ts-config": "^3.3.4",
+		"@sapphire/ts-config": "4.0.0",
 		"@types/node": "18.16.3",
 		"@typescript-eslint/eslint-plugin": "^5.59.1",
 		"@typescript-eslint/parser": "^5.59.1",
 		"eslint": "^8.39.0",
-		"eslint-config-next": "13.3.2",
+		"eslint-config-next": "13.3.4",
 		"eslint-config-prettier": "^8.8.0",
 		"eslint-plugin-prettier": "^4.2.1",
 		"husky": "^8.0.3",
@@ -43,7 +44,7 @@
 		"lint-staged": "^13.2.2",
 		"tailwindcss": "^3.3.2",
 		"turbo": "^1.9.3",
-		"typescript": "4.9.5"
+		"typescript": "5.0.4"
 	},
 	"engines": {
 		"node": ">= v18.16.0"
