--- a/packages/forms/package.json
+++ b/packages/forms/package.json
@@ -1,6 +1,7 @@
 {
 	"name": "@paperplane/forms",
 	"version": "0.0.0",
+	"type": "module",
 	"main": "./src/index.tsx",
 	"types": "./src/index.tsx",
 	"license": "MIT",
@@ -8,7 +9,8 @@
 		"lint": "TIMING=1 eslint"
 	},
 	"peerDependencies": {
-		"react": "^18.2.0"
+		"react": "^18.2.0",
+		"react-dom": "18.2.0"
 	},
 	"dependencies": {
 		"react-select": "^5.7.2"
@@ -17,6 +19,6 @@
 		"@types/react": "^18.2.0",
 		"@types/react-dom": "^18.2.1",
 		"eslint": "8.39.0",
-		"typescript": "^4.9.5"
+		"typescript": "^5.0.4"
 	}
 }
