--- a/packages/navbar/package.json
+++ b/packages/navbar/package.json
@@ -1,6 +1,7 @@
 {
 	"name": "@paperplane/navbar",
 	"version": "0.0.0",
+	"type": "module",
 	"main": "./src/index.tsx",
 	"types": "./src/index.tsx",
 	"license": "MIT",
@@ -8,10 +9,12 @@
 		"lint": "TIMING=1 eslint"
 	},
 	"peerDependencies": {
-		"next": "^13.3.2",
-		"react": "^18.2.0"
+		"next": "^13.3.4",
+		"react": "^18.2.0",
+		"react-dom": "18.2.0"
 	},
 	"dependencies": {
+		"@next/font": "13.3.4",
 		"@paperplane/buttons": "*",
 		"@paperplane/logo": "*",
 		"@paperplane/markdown": "*",
@@ -27,6 +30,6 @@
 		"@types/react": "^18.2.0",
 		"@types/react-dom": "^18.2.1",
 		"eslint": "8.39.0",
-		"typescript": "^4.9.5"
+		"typescript": "^5.0.4"
 	}
 }
