--- a/packages/swr/package.json
+++ b/packages/swr/package.json
@@ -1,6 +1,7 @@
 {
 	"name": "@paperplane/swr",
 	"version": "0.0.0",
+	"type": "module",
 	"main": "./src/index.tsx",
 	"types": "./src/index.tsx",
 	"license": "MIT",
@@ -18,6 +19,6 @@
 		"@types/react": "^18.2.0",
 		"@types/react-dom": "^18.2.1",
 		"eslint": "8.39.0",
-		"typescript": "^4.9.5"
+		"typescript": "^5.0.4"
 	}
 }
