--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -2,12 +2,14 @@
 	"name": "@paperplane/ui",
 	"version": "0.0.0",
 	"license": "MIT",
+	"type": "module",
 	"main": "./src/index.ts",
 	"types": "./src/index.ts",
 	"scripts": {
 		"lint": "TIMING=1 eslint"
 	},
 	"peerDependencies": {
+		"next": "13.3.4",
 		"react": "^18.2.0",
 		"react-dom": "18.2.0"
 	},
@@ -35,6 +37,6 @@
 		"@types/react-dom": "^18.2.1",
 		"@types/react-syntax-highlighter": "^15.5.6",
 		"eslint": "8.39.0",
-		"typescript": "^4.9.5"
+		"typescript": "^5.0.4"
 	}
 }
