--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -39,7 +39,8 @@
 		"ua-parser-js": "^1.0.35",
 		"winston": "^3.9.0",
 		"winston-daily-rotate-file": "^4.7.1",
-		"zip-lib": "^0.7.3"
+		"zip-lib": "^0.7.3",
+		"prisma": "^4.16.1"
 	},
 	"devDependencies": {
 		"@types/busboy": "^1.5.0",
@@ -57,7 +58,6 @@
 		"@types/pidusage": "^2.0.2",
 		"@types/ua-parser-js": "^0.7.36",
 		"eslint": "8.43.0",
-		"prisma": "^4.16.1",
 		"typescript": "^5.1.3"
 	}
 }
