--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
 		"husky": "^8.0.3",
 		"is-ci": "^3.0.1",
 		"lint-staged": "^13.2.2",
+		"pinst": "^3.0.0",
 		"tailwindcss": "^3.3.2",
 		"turbo": "^1.10.6",
 		"typescript": "5.1.3"
