--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -30,7 +30,7 @@ jobs:
       - name: Build Docker Image
         uses: docker/build-push-action@v4
         with:
-          platforms: linux/amd64,linux/arm64
+         # platforms: linux/amd64,linux/arm64
           push: true
           tags: |
             ghcr.io/ijskoud/paperplane:v4
