--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -14,28 +14,11 @@
 		"react-dom": "18.2.0"
 	},
 	"dependencies": {
-		"@paperplane/forms": "*",
-		"@paperplane/navbar": "*",
-		"@paperplane/utils": "*",
-		"axios": "^1.5.0",
-		"formik": "^2.4.3",
-		"framer-motion": "^10.16.1",
-		"huge-uploader": "^1.0.6",
-		"ms": "^2.1.3",
-		"rc-progress": "^3.5.1",
-		"react-color": "^2.19.3",
-		"react-dropzone": "^14.2.3",
-		"react-spinners": "^0.13.8",
-		"react-switch": "^7.0.0",
-		"react-syntax-highlighter": "^15.5.0",
-		"short-unique-id": "^4.4.4",
-		"yup": "^1.2.0"
+		"@paperplane/utils": "*"
 	},
 	"devDependencies": {
 		"@types/react": "^18.2.21",
-		"@types/react-color": "^3.0.6",
 		"@types/react-dom": "^18.2.7",
-		"@types/react-syntax-highlighter": "^15.5.7",
 		"eslint": "8.48.0",
 		"typescript": "^5.2.2"
 	}
