--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -5,6 +5,10 @@
 	"type": "module",
 	"main": "./src/index.ts",
 	"types": "./src/index.ts",
+	"files": [
+		"src",
+		"ThemeToggle.tsx"
+	],
 	"scripts": {
 		"lint": "TIMING=1 eslint"
 	},
