--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -3,6 +3,11 @@
 	"version": "0.0.0",
 	"license": "MIT",
 	"type": "module",
+	"files": [
+		"dropdown-menu.tsx",
+		"button.tsx",
+		"select.tsx"
+	],
 	"scripts": {
 		"lint": "TIMING=1 eslint"
 	},
@@ -14,6 +19,7 @@
 	"dependencies": {
 		"@paperplane/utils": "*",
 		"@radix-ui/react-dropdown-menu": "^2.0.5",
+		"@radix-ui/react-select": "^1.2.2",
 		"@radix-ui/react-slot": "^1.0.2"
 	},
 	"devDependencies": {
