--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -9,7 +9,8 @@
 		"select.tsx",
 		"label.tsx",
 		"input.tsx",
-		"form.tsx"
+		"form.tsx",
+		"dialog.tsx"
 	],
 	"scripts": {
 		"lint": "TIMING=1 eslint"
@@ -21,6 +22,7 @@
 	},
 	"dependencies": {
 		"@paperplane/utils": "*",
+		"@radix-ui/react-dialog": "^1.0.4",
 		"@radix-ui/react-dropdown-menu": "^2.0.5",
 		"@radix-ui/react-label": "^2.0.2",
 		"@radix-ui/react-select": "^1.2.2",
